# numhask-free

./: .gitignore  hie.yaml  numhask-free.cabal  readme.md  stack.yaml
src/NumHask/: Free.hs  FreeAlgebra.hs
test/: test.hs
