cabal-version: 2.4
name:          numhask-free
version:       0.0.3
synopsis: numerical free algebras
description: __The Free Num is a Sequence of Bags.__
             .
             "NumHask.FreeAlgebra" explains.
             .
             /But when we really delve into the reasons for why we can't let something go, there are only two: an attachment to the past or a fear for the future./ ~ Marie Kondo

category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) 2020
license: BSD-3-Clause
homepage: https://github.com/tonyday567/numhask-free#readme
bug-reports: https://github.com/tonyday567/numhask-free/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/numhask-free

library
  hs-source-dirs:
    src
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
    attoparsec >= 0.13 && < 0.14,
    base >=4.7 && <5,
    containers >= 0.6 && < 0.7,
    free >= 5.1 && < 5.2,
    numhask >= 0.8.1 && < 0.9,
    text >= 1.2 && < 1.3,
  exposed-modules:
    NumHask.FreeAlgebra
  other-modules:
  default-language: Haskell2010
